--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,24 +1,27 @@
 [package]
 name = "neon-serde"
-version = "0.4.0"
-authors = ["Gabriel Castro <dev@GabrielCastro.ca>"]
-description = "Easily serialize object for use with neon"
+version = "0.10.0"
+authors = [
+    "Damir Jelić <poljar@termina.org.uk>",
+    "Gabriel Castro <dev@GabrielCastro.ca>"
+]
+description = "Easily serialize object for use with neon, fork of neon-serde"
 license = "MIT"
-repository = "https://github.com/GabrielCastro/neon-serde"
+repository = "https://github.com/matrix-org/neon-serde"
 readme = "readme.md"
+edition = "2021"
 
 [dependencies]
-serde = "1"
-error-chain = "0.12"
-neon = "0.10.1"
-neon-runtime = "0.10.1"
+serde = "1.0"
+
+[dependencies.neon]
+version = "0.10"
+default-features = false
+features = ["default-panic-hook", "napi-6", "try-catch-api", "event-queue-api"]
 
 [dependencies.num]
-version = "0.2"
+version = "0.4.0"
 default-features = false
 
-[dev-dependencies]
-serde_derive = "1"
-
-[badges]
-travis-ci = { repository = "GabrielCastro/neon-serde" }
+[dev-dependencies.serde]
+features = ["derive"]
