--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,5 +23,5 @@ features = ["default-panic-hook", "napi-6", "try-catch-api", "event-queue-api"]
 version = "0.4.0"
 default-features = false
 
-[dev-dependencies.serde]
-features = ["derive"]
+[dev-dependencies]
+serde_derive = "1"
