--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ serde = "1.0"
 [dependencies.neon]
 version = "1.1.1"
 default-features = false
-features = ["default-panic-hook", "napi-8", "try-catch-api", "event-queue-api"]
+features = ["napi-8"]
 
 [dependencies.num]
 version = "0.4.0"
